--- a/acts-pay-dependencies/pom.xml
+++ b/acts-pay-dependencies/pom.xml
@@ -19,7 +19,7 @@
         <dependencies>
             <dependency>
                 <groupId>com.unicom.acts.pay</groupId>
-                <artifactId>acts-pay-service</artifactId>
+                <artifactId>acts-pay-domain</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
@@ -29,7 +29,7 @@
             </dependency>
             <dependency>
                 <groupId>com.unicom.acts.pay</groupId>
-                <artifactId>acts-pay-domain</artifactId>
+                <artifactId>acts-pay-syncserv</artifactId>
                 <version>${revision}</version>
             </dependency>
         </dependencies>
@@ -69,7 +69,6 @@
                 <inherited>false</inherited>
                 <executions>
                     <execution>
-                        <!-- Tidy up all POMs before they are published -->
                         <id>flatten</id>
                         <phase>process-resources</phase>
                         <goals>
@@ -96,7 +95,6 @@
                 <inherited>false</inherited>
                 <executions>
                     <execution>
-                        <!-- Attach effective POM -->
                         <id>attach-artifacts</id>
                         <phase>package</phase>
                         <goals>
@@ -115,4 +113,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
